keys方法改成scan